--- a/index.html
+++ b/index.html
@@ -178,12 +178,12 @@
                 <div class="heading">PROJECT</div>
                 <div id="project-all">
                     <div class="project-block project-block1" data-aos="slide-left" data-aos-easing="ease-in-out">
-                        <img src="images/crowdfunding-landing-page.jpg" alt="crowdfunding-landing-page">
+                        <img src="landing-page.jpg" alt="crowdfunding-landing-page">
                         <div class="project-block-cont">
-                            <span class="project-block-heading">Crowdfunding Landing Page</span>
+                            <span class="project-block-heading">portfolio Page</span>
                             <div class="project-block-links-source">
-                                <a class="project-block-source" href="#">source code</a>
-                                <a class="project-block-link" href="https://crowdfunding-product-page-main-1.netlify.app/">live site</a>
+                                <a class="project-block-source" href="https://github.com/Vineet-tha/Vineet.github.io/tree/main">source code</a>
+                                <a class="project-block-link" href="https://vineet-tha.github.io/Vineet.github.io/">live site</a>
                             </div>
                             <div class="used-lang">
                                 <span class="label">HTML5</span>
@@ -194,7 +194,7 @@
                     </div>
 
                     <div class="project-block project-block2" data-aos="slide-left" data-aos-easing="ease-in-out">
-                        <img src="images/blogr-landing-page.jpg" alt="blogr-landing-page">
+                        <img src="blogr-landing-page.jpg" alt="blogr-landing-page">
                         <div class="project-block-cont">
                             <span class="project-block-heading">Blogr Landing Page</span>
                             <div class="project-block-links-source">
@@ -210,7 +210,7 @@
                     </div>
 
                     <div class="project-block project-block3" data-aos="slide-right" data-aos-easing="ease-in-out">
-                        <img src="images/random-quote-generator.png" alt="random-quote-generator">
+                        <img src="random-quote-generator.png" alt="random-quote-generator">
                         <div class="project-block-cont">
                             <span class="project-block-heading">Random Quote Generator</span>
                             <div class="project-block-links-source">
@@ -226,12 +226,12 @@
                     </div>
 
                     <div class="project-block project-block4" data-aos="slide-right" data-aos-easing="ease-in-out">
-                        <img src="images/tic-tac-toe.png" alt="tic-tac-toe">
+                        <img src="tic-tac-toe.png" alt="tic-tac-toe">
                         <div class="project-block-cont">
                             <span class="project-block-heading">Tic Tac Toe</span>
                             <div class="project-block-links-source">
-                                <a class="project-block-source" href="https://github.com/priya180975/tic-tac-toe">source code</a>
-                            <a class="project-block-link" href="https://priya180975.github.io/tic-tac-toe/">live site</a>
+                                <a class="project-block-source" href="#">source code</a>
+                            <a class="project-block-link" href="#">live site</a>
                             </div>
                             <div class="used-lang">
                                 <span class="label">HTML5</span>
@@ -242,7 +242,7 @@
                     </div>
                     
                     <div class="project-block project-block5" data-aos="slide-left" data-aos-easing="ease-in-out">
-                        <img src="images/3-column-preview-card-component-main.jpg" alt="3-column-preview-card-component-main">
+                        <img src="3-column-preview-card-component-main.jpg" alt="3-column-preview-card-component-main">
                         <div class="project-block-cont">
                             <span class="project-block-heading">3 Column Preview Card Component</span>
                             <div class="project-block-links-source">
@@ -257,7 +257,7 @@
                     </div>
 
                     <div class="project-block project-block6" data-aos="slide-right" data-aos-easing="ease-in-out">
-                        <img src="images/stats-preview-card-component-main.jpg" alt="stats-preview-card-component-main">
+                        <img src="stats-preview-card-component-main.jpg" alt="stats-preview-card-component-main">
                         <div class="project-block-cont">
                             <span class="project-block-heading">Stats Preview Card Component</span>
                             <div class="project-block-links-source">
@@ -272,7 +272,7 @@
                     </div>
 
                     <div class="project-block project-block7" data-aos="slide-right" data-aos-easing="ease-in-out">
-                        <img src="images/weconnected.png" alt="weconnected">
+                        <img src="weconnected.png" alt="weconnected">
                         <div class="project-block-cont">
                             <span class="project-block-heading">Forum and Web Chat App</span>
                             <div class="project-block-links-source">
